--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>tech.lapsa.payara</groupId>
 	<artifactId>payara-bom</artifactId>
-	<version>4.1.2-1</version>
+	<version>4.1.2-2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Payara Lib : 4.1.2.173 BOM</name>
@@ -77,7 +77,7 @@
 	<scm>
 		<connection>scm:git:https://gitlab.lapsa.tech/lapsa/payara/bom.git</connection>
 		<developerConnection>scm:git:https://gitlab.lapsa.tech/lapsa/payara/bom.git</developerConnection>
-		<tag>v4.1.2-1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
