--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,7 @@
 		<payara.javax.el.version>3.0.1-b03</payara.javax.el.version>
 		<payara.jersey.version>2.25.1</payara.jersey.version>
 		<payara.jackson.version>2.8.8</payara.jackson.version>
-		<!-- Actualy Payara 4.1.2.173 uses patched version of eclipselink 2.6.4.payara-p2, 
-			but it is not accessible on public repos -->
-		<eclipselink.version>2.6.4</eclipselink.version>
+		<eclipselink.version>2.6.4.payara-p2</eclipselink.version>
 	</properties>
 
 	<dependencyManagement>
@@ -51,27 +49,17 @@
 			<!-- eclipselink -->
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.antlr</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.asm</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>org.eclipse.persistence.core</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.jpa</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.moxy</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.sdo</artifactId>
 				<version>${eclipselink.version}</version>
 			</dependency>
 			<dependency>
@@ -81,19 +69,34 @@
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.jpa</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>org.eclipse.persistence.moxy</artifactId>
+				<version>${eclipselink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>org.eclipse.persistence.oracle</artifactId>
 				<version>${eclipselink.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.antlr</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.persistence</groupId>
-				<artifactId>org.eclipse.persistence.asm</artifactId>
-				<version>${eclipselink.version}</version>
-			</dependency>
+			<!-- <dependency> -->
+			<!-- <groupId>org.eclipse.persistence</groupId> -->
+			<!-- <artifactId>org.eclipse.persistence.sdo</artifactId> -->
+			<!-- <version>${eclipselink.version}</version> -->
+			<!-- </dependency> -->
 			<!-- jackson -->
 			<dependency>
 				<groupId>com.fasterxml.jackson.jaxrs</groupId>
