--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<payara.javax.el.version>3.0.1-b03</payara.javax.el.version>
 		<payara.jersey.version>2.25.1</payara.jersey.version>
 		<payara.jackson.version>2.8.8</payara.jackson.version>
-		<eclipselink.version>2.6.4.payara-p2</eclipselink.version>
+		<eclipselink.version>2.6.4.payara-p2</eclipselink.version> <!-- see src/bin/cache-payara-libs-to-local-repository.sh for details -->
 	</properties>
 
 	<dependencyManagement>
@@ -92,6 +92,7 @@
 				<artifactId>org.eclipse.persistence.oracle</artifactId>
 				<version>${eclipselink.version}</version>
 			</dependency>
+			<!-- no such artifact on payara build repository -->
 			<!-- <dependency> -->
 			<!-- <groupId>org.eclipse.persistence</groupId> -->
 			<!-- <artifactId>org.eclipse.persistence.sdo</artifactId> -->
